
syntax = "proto3";

package google.protobuf;

option csharp_namespace = "Fluffy.Kafka.Proto.Test";

message TestRecord {
	string id = 1;
	int32 integer = 2;
	double floating = 3;	
	MyEnum enumerated_value = 4;
	repeated string text_values = 5;
}

enum MyEnum {
	VAL_0 = 0;
	VAL_1 = 1;
	VAL_2 = 2;
}